Comecei a escrever o conteúdo

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Cursos Gratis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto do artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Exercitationem facilis sed ad illum tempora, voluptas repellendus suscipit impedit blanditiis ex eius voluptatibus. Ipsum, tempora suscipit! Natus facilis quae harum dolores!</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto do artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque praesentium fugit ratione laborum quisquam voluptatibus totam aliquid nam adipisci corporis illo ab rerum iste tempore soluta, et consequatur tempora consequuntur!</p>
         </article>
     </main>
 </body>
