--- a/index.html
+++ b/index.html
@@ -10,14 +10,19 @@
     <main>
         <header>
             <h1>Cursos Gratis</h1>
+            <img src="imagens/curso-em-video-cor.png" alt="Curso em Vídeo">
         </header>
         <article>
             <h2>Curso de HTML5 com CSS3</h2>
+            <img class="lado" src="imagens/curso-html-css.png" alt="Curso HTML">
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Exercitationem facilis sed ad illum tempora, voluptas repellendus suscipit impedit blanditiis ex eius voluptatibus. Ipsum, tempora suscipit! Natus facilis quae harum dolores!</p>
+            <p><a href="curso-html.html">Acesse o Curso de HTML5</a></p>
         </article>
         <article>
             <h2>Curso de JavaScript</h2>
+            <img class="lado" src="imagens/curso-javascript.png" alt="Curso JavaScript">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque praesentium fugit ratione laborum quisquam voluptatibus totam aliquid nam adipisci corporis illo ab rerum iste tempore soluta, et consequatur tempora consequuntur!</p>
+            <p><a href="curso-js.html">Acesse o Curso de JavaScript</a></p>
         </article>
     </main>
 </body>
